fixed wrong font on title

--- a/src/wordle-clone/App.css
+++ b/src/wordle-clone/App.css
@@ -9,6 +9,10 @@
   align-items:center;
 }
 
+.wordle-clone .text {
+  font-family: 'Roboto', sans-serif;
+}
+
 .header {
   margin-top:5%;
   width:100%;
